--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -86,7 +86,7 @@
             <div class="col-xs-1 col-sm-1 col-md-1" align="center"></div>
             <div class="col-xs-4 col-sm-4 col-md-4" align="center">
                 <!--Картинка профиля-->
-                <img id="plr_image_link" src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250" {% if player.party %}{% if player.party.members_image %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}>
+                <img id="plr_image_link" src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
                 <form method="post" enctype="multipart/form-data" id="formUpload">
                     {% csrf_token %}
                     {{ form }}
