подсветка кнопки Силы на ПК

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2718,6 +2718,10 @@ p.overview__love-stat-timer {
 }
 
 @media (min-width: 1200px) {
+  .love_power_mob_btn {
+    opacity: 1;
+  }
+
   .overview {
     margin-top: 100rem;
     margin-left: 360rem;
