Показывать кнопку выборов

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -296,7 +296,7 @@
               <a href="{% url 'pres_elections' pres_pk=president.pk %}" class="overview__love-part-vote-main">{% trans 'Выборы лидера' context "overview" %}</a>
               {% elif has_parl_voting %}
               <!-- кнопка выборов -->
-              <a href="{% url 'parl_elections' parl_pk=parliament.pk %}" class="overview__love-part-vote" style="display: none;">{% trans 'Выборы' context "overview" %}</a>
+              <a href="{% url 'parl_elections' parl_pk=parliament.pk %}" class="overview__love-part-vote">{% trans 'Выборы' context "overview" %}</a>
               {% endif %}
               <!--партии государства-->
               <div class="overview__par active">
