--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -172,6 +172,13 @@
 				</div>
 
 				<div class="ct__s">
+					<h2 class="ct__s-title">{% trans 'место в рейтинге' context "profile" %}</h2>
+					<p class="ct__s-text">
+						{{ cash_rating }}
+					</p>
+				</div>
+
+				<div class="ct__s">
 					<h2 class="ct__s-title">{% trans 'характеристики' context "profile" %}</h2>
 					<p class="ct__s-text">
 						<font color="FF0000">{{ player.power }}</font>
