снять эффект выделения с кнопки Силы в ПК-адптиве

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -641,6 +641,7 @@
     loveStat.contents.forEach((item) => item.classList.remove('active'));
     loveStat.contents[num].classList.add('active');
     loveStat.btns.forEach((item) => item.classList.remove('active'));
+    loveStat.btns.forEach((item) => item.classList.remove('love_power_mob_btn'));
     loveStat.btns[num].classList.add('active');
   }
   function openPartiesTab() {
