--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -456,6 +456,14 @@ a {
   object-position: center;
 }
 
+.profile__ava-border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200rem;
+    height: 200rem;
+}
+
 .profile__load-img {
   display: block;
   position: absolute;
