--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -50,7 +50,9 @@
 				</span>
 
 				<img src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" class="profile__ava" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
-
+				{% if ava_border %}
+				<img src="{{ ava_border.image.url }}" class="profile__ava-border">
+				{% endif %}
 				<form method="post" enctype="multipart/form-data" id="formUpload">
 					{% csrf_token %}
 					<label class="profile__load-img">
