--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2726,10 +2726,6 @@ p.overview__love-stat-timer {
 }
 
 @media (min-width: 1200px) {
-  .love_power_mob_btn {
-    opacity: 1;
-  }
-
   .overview {
     margin-top: 100rem;
     margin-left: 360rem;
@@ -3821,6 +3817,144 @@ p.overview__love-stat-timer {
 
 .ct__s-text-input span:last-of-type {
   margin-left: auto;
+}
+
+/*! ----- ct__js-table ----- */
+
+.ct__js-table-container {
+  position: relative;
+}
+
+.ct__js-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14rem;
+  line-height: 1.5;
+}
+
+.ct__js-table img {
+  display: inline-block;
+  width: 30rem;
+  height: 30rem;
+  object-fit: contain;
+  object-position: center;
+  margin-right: 6rem;
+}
+
+.ct__js-table tr:nth-of-type(odd) {
+  background-color: var(--c30);
+}
+
+.ct__js-table td {
+  padding: 5rem;
+}
+
+.ct__js-modal-sett {
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  top: -13rem;
+  left: 0;
+  padding: 30rem;
+  padding-left: 100rem;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+  font-size: 16rem;
+  background-color: var(--c30);
+  box-shadow: 0 0 20rem 0 rgba(0, 0, 0, 0.8);
+}
+
+.ct__js-modal-sett label {
+  display: flex;
+  align-items: center;
+}
+
+.ct__js-modal-sett label:not(:last-of-type) {
+  margin-bottom: 20rem;
+}
+
+.ct__js-modal-sett input[type="checkbox"] + span {
+  display: block;
+  width: 20rem;
+  height: 20rem;
+  margin-right: 20rem;
+  border: 1px solid var(--c10two);
+}
+
+.ct__js-modal-sett input[type="checkbox"]:checked + span {
+  background-color: var(--c10two);
+}
+
+.ct__js-modal-sett.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.ct__js-modal-sett-close {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30rem;
+  height: 30rem;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.ct__js-modal-sett-open {
+  display: block;
+  position: absolute;
+  right: 12rem;
+  top: -2rem;
+  width: 30rem;
+  height: 30rem;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.ct__js-modal-sett-close svg,
+.ct__js-modal-sett-open svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.ct__js-table-pag {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rem;
+}
+
+.ct__js-table-pag > span {
+  font-size: 18rem;
+  margin: 0 20rem;
+}
+
+.ct__js-table-pag-prev,
+.ct__js-table-pag-next {
+  display: block;
+  width: 30rem;
+  height: 30rem;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.ct__js-table-pag-prev svg,
+.ct__js-table-pag-next svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.ct__js-table-pag-prev {
+  transform: scaleX(-1);
 }
 
 /*! ----- ct__decor-border ----- */
