--- a/player/templates/player/redesign/lists/universal_list.html
+++ b/player/templates/player/redesign/lists/universal_list.html
@@ -6,6 +6,8 @@
 {% load get_attr %}
 {% load is_list %}
 {% load has_key %}
+{% load lower %}
+{% load get_class_name %}
 {% load get_key_list %}
 {% load dict_key %}
 {% block content %}
@@ -107,8 +109,9 @@
 						<!--если это вложенный словарь-->
 						{% if not elem|has_key:'visible' %}
 							{% for sub_col in elem|get_key_list %}
-							  <td class="j-t-{{ col }}_{{ sub_col }}">
-								  {% with sub_obj=line|get_attr:col %}
+								{% with sub_obj=line|get_attr:col %}
+							  <td class="j-t-{{ col }}_{{ sub_col }}" style="cursor: pointer" onclick="window.open('/{% if sub_obj|get_class_name == 'Player' %}profile{% else %}{{ sub_obj|get_class_name|lower }}{% endif %}/{{ sub_obj.pk }}/')">
+
 								  		<!--картинка рега-->
 									  {% if col == 'region' and sub_col == 'on_map_id' %}
 											<img src="/static/img/regions/{{ sub_obj.on_map_id }}.png" alt="{{ col }}_{{ sub_col }}">
@@ -125,12 +128,12 @@
 									  {% else %}
 								  		{{ sub_obj|get_attr:sub_col }}
 									  {% endif %}
-								  {% endwith %}
 							  </td>
+								  {% endwith %}
 							{% endfor %}
 
 						{% else %}
-						  <td class="j-t-{{ col }}">
+						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' %}profile{% else %}{{ line|get_class_name|lower }}{% endif %}/{{ line.pk }}/')">
 						  <!--картинка рега-->
 						  {% if col == 'on_map_id' %}
 								<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
