--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -260,11 +260,9 @@
             </svg>
             {% endif %}
           </a>
-
-        </div>
         {% else %}
         <!--Блок ИВЕНТ-->
-        <a href="##" class="overview__event">
+        <a href="/halloween/" class="overview__event">
           <!--сообщение что войн нет-->
           <p class="overview__war-no event">{% trans 'Хэллоуинский ивент' context "overview" %}</p>
           <!--иконка тыквы-->
@@ -274,6 +272,7 @@
           </svg>
         </a>
         {% endif %}
+        </div>
         <!--Полоска под блоком война-->
         <div class="overview__line"></div>
         <!--Нижний турбо блок-->
