--- a/player/templates/player/redesign/game_event/halloween.html
+++ b/player/templates/player/redesign/game_event/halloween.html
@@ -145,7 +145,9 @@
         </li>
 
         <li class="hw__item">
-          <img class="hw__border" src="" alt="">
+          {% if ava_border_1 %}
+          <img class="hw__border" src="{{ ava_border_1.image.url }}" alt="">
+          {% endif %}
           <div class="hw__item-point"></div>
           <p class="hw__item-text">
             4 000 {% trans 'очков' context "game_event" %}:<br>
@@ -172,7 +174,9 @@
         </li>
 
         <li class="hw__item">
-          <img class="hw__border" src="" alt="">
+          {% if ava_border_2 %}
+          <img class="hw__border" src="{{ ava_border_2.image.url }}" alt="">
+          {% endif %}
           <div class="hw__item-point"></div>
           <p class="hw__item-text">
             10 000 {% trans 'очков' context "game_event" %}:<br>
@@ -190,7 +194,9 @@
         </li>
 
         <li class="hw__item">
-          <img class="hw__border" src="" alt="">
+          {% if ava_border_3 %}
+          <img class="hw__border" src="{{ ava_border_3.image.url }}" alt="">
+          {% endif %}
           <div class="hw__item-point"></div>
           <p class="hw__item-text">
             14 000 {% trans 'очков' context "game_event" %}:<br>
