--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -51,7 +51,11 @@
 
 				<img src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" class="profile__ava" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
 				{% if ava_border %}
-				<img src="{{ ava_border.image.url }}" class="profile__ava-border">
+				<svg class="profile__ava-border" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
+					{% autoescape off %}
+					{{ ava_border.shape }}
+					{% endautoescape %}
+				</svg>
 				{% endif %}
 				<form method="post" enctype="multipart/form-data" id="formUpload">
 					{% csrf_token %}
