--- a/region/templates/region/region_view.html
+++ b/region/templates/region/region_view.html
@@ -69,7 +69,7 @@
                                 <b><font size="4">{{ players_count }}</font></b>
                             </div>
                         </div>
-                        <div class="row flex" >
+                        <div class="row flex" onclick="window.location.href = '/region/{{ region.pk }}/citizens/'">
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                 <b><font size="4">Граждан:</font></b>
                             </div>
