--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -71,6 +71,9 @@
 					<h2 class="ct__s-title">{% trans 'место в рейтинге' context "profile" %}</h2>
 					<p class="ct__s-text">
 						{{ cash_rating }}
+						<a href="/cash_top/">
+							{% trans '(к рейтингу)' context "profile" %}
+						</a>
 					</p>
 				</div>
 
